# wbooks

./: Cargo.toml  Makefile  configuration.nix  default.nix  derivation.nix  front-default.nix  front-derivation.nix  module.nix  shell.nix
deploy/: logical.nix
deploy/physical/: virtualbox.nix
docs/: journal.md  todo.md
po/wbooks/: en.po  fr.po  wbooks.pot
public/: index.html
src/: main.rs
