[package]
name = "wbooks"
version = "0.1.0"
authors = ["Henri Bourcereau <henri@bourcereau.fr>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
warp = "0.2.0"
tokio = "0.2.9"

[dev-dependencies]
tokio = { version = "0.2", features = ["macros"] }
